He acabado con todo de Mercedes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,8 @@
   <a [routerLink]='["home"]'>Home-</a>
   <a [routerLink]="['coche']">Coche-</a>
   <a [routerLink]='["persona"]'>Persona-</a>
-  <a [routerLink]='["animal"]'>Animal</a>
+  <a [routerLink]='["animal"]'>Animal-</a>
+  <a [routerLink]='["discos"]'>Discos</a>
 </nav>
 <!-- <app-persona></app-persona> -->
 <router-outlet></router-outlet>
