--- a/src/app/principal/principal.component.html
+++ b/src/app/principal/principal.component.html
@@ -1,12 +1,20 @@
-<ejs-diagram 
-#diagram 
-id="diagram" 
-width="100%" 
-height="1000px" 
-[getConnectorDefaults]='connDefaults' 
-[getNodeDefaults]='nodeDefaults' 
-[tool]='tool' 
-[layout]='layout' 
-[dataSourceSettings]='data' 
-[snapSettings]='snapSettings'>
+<ejs-diagram #diagram id="diagram" width="100%" height="580px" [getNodeDefaults] ='getNodeDefaults' [getConnectorDefaults] ='getConnectorDefaults'>
+    <e-nodes>
+        <e-node id='node1' [offsetX]=150 [offsetY]=150>
+            <e-node-annotations>
+                <e-node-annotation content="Node1">
+                </e-node-annotation>
+            </e-node-annotations>
+        </e-node>
+        <e-node id='node2' [offsetX]=350 [offsetY]=150>
+            <e-node-annotations>
+                <e-node-annotation content="Custom Template">
+                </e-node-annotation>
+            </e-node-annotations>
+        </e-node>
+    </e-nodes>
+    <e-connectors>
+        <e-connector id='connector' type='Straight' sourceID='node1' targetID='node2'>
+        </e-connector>
+    </e-connectors>
 </ejs-diagram>
