--- a/src/app/principal/principal.component.html
+++ b/src/app/principal/principal.component.html
@@ -10,7 +10,7 @@
     </e-nodes>
 </ejs-diagram>
 -->
-
+<input type="button" value="+" (click)="handleClick(true)"><input type="button" value="-" (click)="handleClick(false)">
 <ejs-diagram 
     #diagram 
     id="diagram" 
@@ -24,3 +24,13 @@
     [snapSettings]='snapSettings'
     >
 </ejs-diagram>
+<!--<ejs-diagram #diagram id="diagram" width="100%" height="580px" [layers]="layers">
+    <e-connectors>
+            <e-connector id='connector' type='Straight' [sourcePoint]='sourcePoint' [targetPoint]='targetPoint'>
+            </e-connector>
+    </e-connectors>
+    <e-nodes>
+            <e-node id='node1' [offsetX]=150 [offsetY]=150></e-node>
+            <e-node id='node2' [offsetX]=350 [offsetY]=350></e-node>
+    </e-nodes>
+    </ejs-diagram>-->
