--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,9 @@
-<app-principal></app-principal>
+<div *ngIf="b == true">
+    <button (click)="d(false)">Desplegar</button>
+    <app-principal></app-principal>
+</div>
+<div *ngIf="b == false">
+    <button (click)='d(true)'>Plegar</button>
+    <app-drg></app-drg>
+</div>
+
