--- a/src/app/drg/drg.component.html
+++ b/src/app/drg/drg.component.html
@@ -1,14 +1,15 @@
 <ejs-diagram 
-#diagram 
-id="diagram" 
-width="100%" 
-height="1000px" 
-[getConnectorDefaults]='connDefaults' 
-[getNodeDefaults]='nodeDefaults' 
-[tool]='tool' 
-[layout]='layout' 
-[dataSourceSettings]='data' 
-[snapSettings]='snapSettings'>
+    #diagram 
+    id="diagram" 
+    width="100%" 
+    height="790px" 
+    [getConnectorDefaults]='connDefaults' 
+    [getNodeDefaults]='nodeDefaults' 
+    [tool]='tool' 
+    [layout]='layout' 
+    [dataSourceSettings]='data' 
+    [snapSettings]='snapSettings'
+    >
 </ejs-diagram>
 
 <!--<ejs-diagram 
