--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <div *ngIf="b == true">
-    <button (click)="d(false)">Desplegar</button>
+    <button (click)="d(false)" class="btn btn-primary m-3">Desplegar</button>
     <app-principal></app-principal>
 </div>
 <div *ngIf="b == false">
-    <button (click)='d(true)'>Plegar</button>
+    <button (click)='d(true)' class="btn btn-primary m-3">Plegar</button>
     <app-drg></app-drg>
 </div>
 
