--- a/src/app/prueba/prueba.component.html
+++ b/src/app/prueba/prueba.component.html
@@ -1,7 +1,7 @@
 
     <ejs-diagram id="diagram" width="100%" height="580px" mode="SVG" [layout]='layout' [getConnectorDefaults]='connDefaults' [constraints]='diagramConstraints'>
         <e-nodes>
-            <e-node id='node1' [height]=60 [width]=100 [shape]='shape' [style]='style'  onclick="boton(false)">
+            <e-node id='node1' [height]=60 [width]=100 [shape]='shape' [style]='style'  onmouseover="myFunction()" onclick="alert('click event occured')">
                 <e-node-annotations>
                     <e-node-annotation content='{{vari1}}'></e-node-annotation>
                 </e-node-annotations>
@@ -21,17 +21,11 @@
                     <e-node-annotation content='IPDS'></e-node-annotation>
                 </e-node-annotations>
             </e-node>
-            <e-node id='node5' [height]=60 [width]=100 [shape]='shape' [style]='style1' >
-                <e-node-annotations>
-                    <e-node-annotation content='{{vari2}}'></e-node-annotation>
-                </e-node-annotations>
-            </e-node>
         </e-nodes>
         <e-connectors>
             <e-connector id='connector1' sourceID='node1' targetID='node2' ></e-connector>
             <e-connector id='connector2' sourceID='node1' targetID='node3'></e-connector>
             <e-connector id='connector3' sourceID='node1' targetID='node4'></e-connector>
-            <e-connector id='connector4' sourceID='node2' targetID='node5' ></e-connector>
         </e-connectors>
     </ejs-diagram>
 
